--- a/Front/bootstrap/restaurant.html
+++ b/Front/bootstrap/restaurant.html
@@ -91,9 +91,12 @@
                                 <input type="text" class="form-control" placeholder="How Many People" name="how_many">
                             </div>
                             <div class="form-group">
-                                <input type="date" id="birthday" name="birthday">
+                                <input type="date" class="form-control" placeholder="date" name="date">
                             </div>
-                            
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Message \ Special requirements" name="message">
+                            </div>
+                            <button type="button" class="btn btn-light">Send Message</button>
                         </form>
                     </div>
 
@@ -108,6 +111,28 @@
             logo
         </h1>
     </div>
+    <div class="row">
+        <br><br><br><br><br><br><br><br><br>
+    </div>
+    <div class="row m-auto text-white">
+        <h2>
+            monday - friday 10-23 | saturday 14-02
+        </h2>
+
+    </div>
+    <div class="row m-auto text-white">
+        <h4>
+            42 village St, New York
+        </h4>
+
+    </div>
+    <div class="row m-auto text-white">
+        <p>
+            powered by Hadi
+        </p>
+
+    </div>
+
 
 </div>
 
