--- a/hw11/q1.html
+++ b/hw11/q1.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="q1.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 
 </head>
 <body>
@@ -14,10 +15,17 @@
     <div class="column left">
         <img src="pic2.jpg" alt="picture of hadi komeili">
         <h1>Hadi Komeili</h1>
-        <p>Python Programer</p>
+        <p>Python Programer</p><br>
+        <a href="https://facebook.com" class="fa fa-facebook"></a>
+        <a href="https://twitter.com" class="fa fa-twitter"></a>
+        <a href="https://google.com" class="fa fa-google"></a>
+        <a href="https://telegram.com" class="fa fa-telegram"></a>
+        <h3>ABOUT ME</h3>
+        <h3>EXPERIENCE</h3>
+        <h3>EDUCATION</h3>
     </div>
     <div class="column right">
-        <button class="btn"><i class="fa fa-download"></i>Download Resume</button>
+        <button class="btn"><i class="fa fa-download" id="download_icon"></i>Download Resume</button>
         <h2>About Me</h2>
         <p>Hello. My name is Hadi. ...<br> ... <br> ...</p>
         <p></p>
