--- a/hw11/q1.html
+++ b/hw11/q1.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="q1.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
 
 </head>
 <body>
 
-<div class="row">
+
     <div class="column left">
         <img src="pic2.jpg" alt="picture of hadi komeili">
         <h1>Hadi Komeili</h1>
@@ -28,13 +28,15 @@
         <button class="btn"><i class="fa fa-download" id="download_icon"></i>Download Resume</button>
         <h2>About Me</h2>
         <p>Hello. My name is Hadi. ...<br> ... <br> ...</p>
-        <p></p>
+        <br>
         <p><span>Birthday:</span> March 22, 1990</p>
         <p><span>Location:</span> Birjand, Iran</p>
         <p><span>Email:</span> komeili.hadi@gmail.com</p>
-        <p><span>Phone:</span> +98 915 963 86 25</p>
+        <p><span>Phone:</span> +98 915 963 86 25</p><br><br>
+        <pre><strong>Photoshop</strong>                                  <span style="color: grey">90%</span>     <strong>Illustrator</strong>                                 <span style="color: grey">80%</span></pre>
+
     </div>
-</div>
+
 
 </body>
 </html>
