--- a/hw12/q3.html
+++ b/hw12/q3.html
@@ -5,7 +5,7 @@
     <title>Test Result</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="result.css" rel="stylesheet">
+    <link href="q3.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="text-align: center; text-align-all: center">
